# kactivities

./: .arcconfig  .clang-format  .clang_complete  .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KActivitiesConfig.cmake.in  KF5ActivitiesConfig.cmake.in  KF6ActivitiesConfig.cmake.in  MAINTAINER  Mainpage.dox  README  README.developers  README.md  README.packagers  TODO  kactivities.categories  libkactivities.pc.cmake  metainfo.yaml  org.kde.ActivityManager.xml  vim-extrarc
autotests/core/: CMakeLists.txt  CleanOnlineTest.cpp  CleanOnlineTest.h  OfflineTest.cpp  OfflineTest.h  Process.cpp  Process.h  main.cpp
autotests/stats/: CMakeLists.txt  QueryTest.cpp  QueryTest.h  ResultSetQuickCheckTest.cpp  ResultSetQuickCheckTest.h  ResultSetTest.cpp  ResultSetTest.h  ResultWatcherTest.cpp  ResultWatcherTest.h  main.cpp
service/: ActivityManager.cpp  ActivityManager.h  ActivityManager_Basics.cpp  ActivityManager_Resources.cpp  ActivityManager_StartStop.cpp  ActivityManager_Windowing.cpp  ActivityManager_p.h  CMakeLists.txt  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  Messages.sh  NepomukActivityManager.cpp  NepomukActivityManager.h  Plugin.cpp  Plugin.h  SharedInfo.cpp  SharedInfo.h  TODO  activitymanager-plugin.desktop  config-features.h.cmake  kactivitymanagerd.desktop  krazy  main.cpp  org.kde.ActivityManager.xml  queries.sparql
service/encryption/: EncfsInterface.cpp  EncfsInterface.h  EncfsInterface_p.h  EncryptionManager.cpp  EncryptionManager.h  EncryptionManager_p.h
service/fakedata/: data1  data2-activities-on-off
service/jobs/: DIRS.txt  Job.cpp  Job.h  JobFactory.cpp  JobFactory.h  JobScheduler.cpp  JobScheduler.h  JobScheduler_p.h
service/jobs/activity/: Start.cpp  Start.h  all.h
service/jobs/encryption/: Common.cpp  Common.h  InitializeStructure.cpp  InitializeStructure.h  Mount.cpp  Mount.h  all.h
service/jobs/general/: Call.cpp  Call.h  all.h
service/jobs/nepomuk/: Move.cpp  Move.h  all.h
service/jobs/schedulers/: Abstract.cpp  Abstract.h  Abstract_p.h  Fallible.h  Given.cpp  Given.h  Ordered.cpp  Ordered.h  Retry.h  Switch.h  Test.cpp  Test.h  all.h
service/jobs/ui/: Ask.cpp  Ask.h  AskPassword.cpp  AskPassword.h  Message.cpp  Message.h  SetBusy.cpp  SetBusy.h  all.h
service/kded/: CMakeLists.txt
service/plugins/: CMakeLists.txt
service/plugins/activityranking/: ActivityData.cpp  ActivityData.h  CMakeLists.txt  Location.cpp  Location.h  activitymanager-plugin-activityranking.desktop  activityranking.cpp  activityranking.h  org.kde.ActivityManager.ActivityRanking.xml
service/plugins/dummy/: CMakeLists.txt  activitymanager-plugin-dummy.desktop  dummy.cpp  dummy.h
service/plugins/globalshortcuts/: CMakeLists.txt  activitymanager-plugin-globalshortcuts.desktop  globalshortcuts.cpp  globalshortcuts.h
service/plugins/nepomuk/: CMakeLists.txt  NepomukCommon.cpp  NepomukCommon.h  NepomukPlugin.cpp  NepomukPlugin.h  NepomukResourceScoreCache.cpp  NepomukResourceScoreCache.h  NepomukResourceScoreMaintainer.cpp  NepomukResourceScoreMaintainer.h  Rankings.cpp  Rankings.h  RankingsClient.h  activitymanager-plugin-nepomuk.desktop  org.kde.ActivityManager.Rankings.xml
service/plugins/slc/: CMakeLists.txt  activitymanager-plugin-slc.desktop  org.kde.ActivityManager.SLC.xml  slc.cpp  slc.h
service/plugins/sqlite/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  NepomukCommon.cpp  NepomukCommon.h  Rankings.cpp  Rankings.h  RankingsClient.h  ResourceScoreCache.cpp  ResourceScoreCache.h  ResourceScoreMaintainer.cpp  ResourceScoreMaintainer.h  StatsPlugin.cpp  StatsPlugin.h  activitymanager-plugin-sqlite.desktop
service/scripts/: delete-activities.sh  delete-stats.sh
service/ui/: Ui.cpp  Ui.h  UiHandler.cpp  UiHandler.h
service/ui/plugins/: CMakeLists.txt
src/: CMakeLists.txt  config-features.h.cmake  kactivities-features.h.cmake
src/cli/: CMakeLists.txt  main.cpp  utils.h
src/common/database/: Database.cpp  Database.h
src/common/dbus/: common.h  (+7 more)
src/imports/: CMakeLists.txt  README  activitiesextensionplugin.cpp  activitiesextensionplugin.h  activityinfo.cpp  activityinfo.h  activitymodel.cpp  activitymodel.h  resourceinstance.cpp  resourceinstance.h  resourcemodel.cpp  resourcemodel.h  utils_p.h
src/lib/: CMakeLists.txt  activitiescache_p.cpp  activitiescache_p.h  activitiesmodel.cpp  activitiesmodel.h  activitiesmodel_p.h  consumer.cpp  consumer.h  consumer_p.h  controller.cpp  controller.h  debug_p.cpp  info.cpp  info.h  info_p.h  libKActivities.pc.cmake  mainthreadexecutor_p.cpp  mainthreadexecutor_p.h  manager_p.cpp  manager_p.h  resourceinstance.cpp  resourceinstance.h  utils_p.h  version.cpp  version.h
src/lib/core/: info.cpp  (+26 more)
src/ontologies/: CMakeLists.txt  kao.ontology.in  kao.trig
src/service/: Activities.cpp  Activities.h  Activities_p.h  Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Debug.cpp  Debug.h  Event.cpp  Event.h  Features.cpp  Features.h  Module.cpp  Module.h  NepomukActivityManager.cpp  NepomukActivityManager.h  Plugin.cpp  Plugin.h  Resources.cpp  Resources.h  Resources_p.h  common.h  config-features.h.cmake
src/utils/: continue_with.h  d_ptr.h  d_ptr_implementation.h  dbusfuture_p.cpp  dbusfuture_p.h  debug_and_return.h  find_if_assoc.h  for_each_assoc.h  lazy_val.h  member_matcher.h  merge_into.h  model_updaters.h  nullptr.h  optional_view.h  override.h  ptr_to.h  qflatset.h  qsqlquery.cpp  qsqlquery_iterator.cpp  range.h  remove_if.h  val.h
src/workspace/: CMakeLists.txt
tests/activities-model/: CMakeLists.txt  main.cpp  window.cpp  window.h  window.ui
tests/core/: CMakeLists.txt  OfflineTest.cpp  OfflineTest.h  Process.cpp  Process.h  main.cpp
tests/slc-interface/: CMakeLists.txt  main.cpp  window.cpp  window.h  window.ui
workspace/: CMakeLists.txt
workspace/fileitemplugin/: CMakeLists.txt  Messages.sh  fileitemlinkingplugin.cpp  fileitemlinkingplugin.h  fileitemlinkingplugin_p.h  kactivitymanagerd_fileitem_linking_plugin.desktop
workspace/kio/: CMakeLists.txt  Messages.sh  kio_activities.cpp  kio_activities.h
(+437 files in other folders)
